configurable real-time or post call running

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -49,3 +49,39 @@ WHISPER_STREAMING_MODEL=base  # Lighter model for real-time
 WHISPER_BATCH_MODEL=large-v3  # Full model for batch processing
 
 ASTERISK_SERVER_IP=your.ip.address
+
+# Processing Mode Configuration
+DEFAULT_PROCESSING_MODE=hybrid
+ENABLE_REALTIME_PROCESSING=true
+ENABLE_POSTCALL_PROCESSING=true
+ENABLE_SCP_AUDIO_DOWNLOAD=true
+
+# Real-time Processing Settings
+REALTIME_MIN_WINDOW_CHARS=150
+REALTIME_TARGET_WINDOW_CHARS=300
+REALTIME_OVERLAP_CHARS=50
+REALTIME_PROCESSING_INTERVAL_SECONDS=30
+REALTIME_ENABLE_PROGRESSIVE_TRANSLATION=true
+REALTIME_ENABLE_PROGRESSIVE_ENTITIES=true
+REALTIME_ENABLE_PROGRESSIVE_CLASSIFICATION=true
+REALTIME_ENABLE_AGENT_NOTIFICATIONS=true
+
+# Post-call Processing Settings
+POSTCALL_AUDIO_DOWNLOAD_METHOD=scp
+POSTCALL_ENABLE_FULL_PIPELINE=true
+POSTCALL_ENABLE_ENHANCED_TRANSCRIPTION=true
+POSTCALL_WHISPER_MODEL=large-v3
+POSTCALL_CONVERT_TO_WAV=true
+POSTCALL_DOWNLOAD_TIMEOUT_SECONDS=60
+
+# SCP Audio Download Configuration
+SCP_USER=helpline
+SCP_SERVER=192.168.10.3
+SCP_PASSWORD=h3lpl1n3
+SCP_REMOTE_PATH_TEMPLATE=/home/dat/helpline/calls/{call_id}.gsm
+SCP_TIMEOUT_SECONDS=30
+
+# Adaptive Processing Rules
+ADAPTIVE_SHORT_CALL_THRESHOLD_SECONDS=30
+ADAPTIVE_LONG_CALL_THRESHOLD_SECONDS=600
+ADAPTIVE_HIGH_PRIORITY_KEYWORDS=emergency,urgent,critical,suicide,violence,accident,medical,police,fire,ambulance
