--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -91,3 +91,12 @@ WHISPER_MODEL_VARIANT=large_turbo
 TRANSLATION_STRATEGY=custom_model
 WHISPER_LARGE_V3_PATH=./models/whisper_large_v3
 WHISPER_LARGE_TURBO_PATH=./models/whisper_large_turbo
+
+# Agent Notification Configuration
+ENABLE_AGENT_NOTIFICATIONS=true
+NOTIFICATION_MODE=results_only
+NOTIFICATION_ENDPOINT_URL=https://your.server.ip/api/msg/
+NOTIFICATION_AUTH_ENDPOINT_URL=https://your.server.ip/api/
+NOTIFICATION_BASIC_AUTH=your_base64_encoded_credentials
+NOTIFICATION_REQUEST_TIMEOUT=10
+NOTIFICATION_MAX_RETRIES=3
