--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -170,3 +170,9 @@ weasel==0.4.1
 websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.1
+librosa>=0.10.0
+webrtcvad>=2.0.10
+scipy>=1.9.0
+soundfile>=0.12.0
+boto3>=1.26.0
+botocore>=1.29.0
