--- a/wallboard/package.json
+++ b/wallboard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "recharts": "^3.2.1",
     "vue": "^3.3.4"
   },
