Add HuggingFace Hub model loading support
- Configure AI service to load models from openchs organization on HuggingFace Hub
- Add settings for HF token authentication and model ID configuration
- Update Whisper, Classifier, and Translator models to support HF Hub loading
- Maintain backward compatibility with local model fallback
- Add test script for validating HF configuration

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -92,6 +92,20 @@ TRANSLATION_STRATEGY=custom_model
 WHISPER_LARGE_V3_PATH=./models/whisper_large_v3
 WHISPER_LARGE_TURBO_PATH=./models/whisper_large_turbo
 
+# HuggingFace Hub Configuration
+USE_HF_MODELS=true
+HF_ORGANIZATION=openchs
+HF_TOKEN=your_hf_token_here
+
+# HuggingFace Model IDs (using openchs organization models)
+HF_WHISPER_LARGE_V3=openai/whisper-large-v3
+HF_WHISPER_LARGE_TURBO=openai/whisper-large-v3-turbo
+HF_CLASSIFIER_MODEL=openchs/multitask-classifier
+HF_NER_MODEL=openchs/ner-model
+HF_TRANSLATOR_MODEL=openchs/translation-model
+HF_SUMMARIZER_MODEL=openchs/summarization-model
+HF_QA_MODEL=openchs/qa-model
+
 # Agent Notification Configuration
 ENABLE_AGENT_NOTIFICATIONS=true
 NOTIFICATION_MODE=results_only
