--- a/ai_docs/docs/Dockerfile
+++ b/ai_docs/docs/Dockerfile
@@ -1,15 +1,12 @@
 # Stage 1: Build the VitePress site
-FROM node:20-slim as builder
+FROM node:20-alpine as builder
 WORKDIR /app
-
-# Install security updates and clean cache
-RUN apt-get update && apt-get upgrade -y && rm -rf /var/lib/apt/lists/*
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Install dependencies (prefer npm ci for reproducibility)
-RUN npm ci
+# Install dependencies
+RUN npm install
 
 # Copy the docs directory
 COPY docs/ ./docs/
@@ -18,8 +15,7 @@ COPY docs/ ./docs/
 RUN npm run docs:build
 
 # Stage 2: Serve the static files with Nginx
-FROM nginx:1.27.2-alpine3.20
-
+FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 
 # Remove default Nginx public folder
@@ -30,10 +26,6 @@ COPY --from=builder /app/docs/.vitepress/dist/ .
 
 # Copy the Nginx configuration
 COPY docs/nginx.conf /etc/nginx/conf.d/default.conf
-
-# Drop privileges for security
-RUN adduser -D appuser && chown -R appuser:appuser /usr/share/nginx/html
-USER appuser
 
 # Expose port 80
 EXPOSE 80
