feat: Update configuration for agent notifications and processing modes

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -48,6 +48,7 @@ REDIS_STREAMING_CHANNEL_PREFIX=ai_streaming
 WHISPER_STREAMING_MODEL=base  # Lighter model for real-time
 WHISPER_BATCH_MODEL=large-v3  # Full model for batch processing
 
+# Agent Notification Configuration
 ASTERISK_SERVER_IP=your.ip.address
 
 # Processing Mode Configuration
