Update NER model feature documentation

--- a/ai_service/datasets/ner/.gitignore
+++ b/ai_service/datasets/ner/.gitignore
@@ -1,2 +1,4 @@
 
 /ner_synthetic_dataset_v2.jsonl
+/home/marlon/ai/ai_service/datasets/ner/ner_synthetic_dataset_v1.jsonl
+/home/marlon/ai/ai_service/datasets/ner/ner_synthetic_dataset_v2.jsonl
