--- a/finalui/package.json
+++ b/finalui/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.403",
     "axios": "^1.13.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "unplugin-icons": "^22.5.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.7"
   }
 }
