--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -1,6 +1,7 @@
 # Application Settings
 APP_NAME=AI Pipeline
 APP_VERSION=0.1.0
+APP_PORT=8125  # Port for FastAPI application
 DEBUG=true
 LOG_LEVEL=INFO
 
