--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -11,6 +11,8 @@ audioread==3.0.1
 av==15.0.0
 billiard==4.2.1
 blis==1.3.0
+boto3==1.40.72
+botocore==1.40.72
 catalogue==2.0.10
 celery==5.5.3
 certifi==2025.7.14
@@ -29,7 +31,7 @@ ctranslate2==4.4.0
 cymem==2.0.11
 debugpy==1.8.15
 decorator==5.2.1
-en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
 executing==2.2.0
 fastapi==0.116.1
 faster-whisper==1.2.0
@@ -38,6 +40,7 @@ flatbuffers==25.2.10
 flower==2.0.1
 frozenlist==1.7.0
 fsspec==2025.7.0
+greenlet==3.2.4
 h11==0.16.0
 hf-xet==1.1.5
 httpcore==1.0.9
@@ -52,6 +55,7 @@ ipython==9.4.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
+jmespath==1.0.1
 joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
@@ -127,6 +131,7 @@ redis==6.2.0
 regex==2024.11.6
 requests==2.32.4
 rich==14.0.0
+s3transfer==0.14.0
 sacremoses==0.1.1
 safetensors==0.5.3
 scikit-learn==1.7.1
@@ -142,6 +147,7 @@ soxr==0.5.0.post1
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.44
 srsly==2.5.1
 stack-data==0.6.3
 starlette==0.47.2
@@ -167,12 +173,7 @@ vine==5.1.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
+webrtcvad==2.0.10
 websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.1
-librosa>=0.10.0
-webrtcvad>=2.0.10
-scipy>=1.9.0
-soundfile>=0.12.0
-boto3>=1.26.0
-botocore>=1.29.0
