--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -87,6 +87,19 @@ ADAPTIVE_SHORT_CALL_THRESHOLD_SECONDS=30
 ADAPTIVE_LONG_CALL_THRESHOLD_SECONDS=600
 ADAPTIVE_HIGH_PRIORITY_KEYWORDS=emergency,urgent,critical,suicide,violence,accident,medical,police,fire,ambulance
 
+# HuggingFace Hub Configuration
+USE_HF_MODELS=true
+HF_ORGANIZATION=openchs
+HF_TOKEN=your_hf_token_here
+
+# HuggingFace Model IDs (using openchs organization models)
+HF_ASR_MODEL=openai/whisper-large-v3
+HF_CLASSIFIER_MODEL=openchs/multitask-classifier
+HF_NER_MODEL=openchs/ner-model
+HF_TRANSLATOR_MODEL=openchs/translation-model
+HF_SUMMARIZER_MODEL=openchs/summarization-model
+HF_QA_MODEL=openchs/qa-model
+
 # Whisper Model Configuration
 WHISPER_MODEL_VARIANT=large_turbo
 TRANSLATION_STRATEGY=custom_model
