Add agent payload logging and notification enhancements
- Updated .gitignore to include logs directory.
- Modified .env.example to add agent payload logging configuration.
- Enhanced settings.py to include agent payload logging options.
- Updated enhanced_notification_service.py to support payload logging.
- Added logic to call_session_manager.py for processing modes and notifications.
- Implemented notification sending in audio_tasks.py after pipeline processing.
- Improved scp_audio_downloader.py to detect audio file format dynamically.

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -115,3 +115,8 @@ NOTIFICATION_AUTH_ENDPOINT_URL=https://your.server.ip/api/
 NOTIFICATION_BASIC_AUTH=your_base64_encoded_credentials
 NOTIFICATION_REQUEST_TIMEOUT=10
 NOTIFICATION_MAX_RETRIES=3
+
+# Agent Payload Logging (for UI development)
+# Set to true to log all notification payloads to a file for UI development
+ENABLE_AGENT_PAYLOAD_LOGGING=false
+AGENT_PAYLOAD_LOG_FILE=./logs/agent_payloads.jsonl
