Monitoring with Grafana and Testing of the system done

--- a/ai_service/.gitignore
+++ b/ai_service/.gitignore
@@ -63,3 +63,12 @@ ai/ai_service/ai_service.db
 *.onnx
 *.pt
 *.pth
+# Load test results
+load_test_*.html
+load_test_*.txt
+load_test_results_*/
+LOAD_TEST_SUMMARY.md
+
+# Monitoring data
+monitoring/grafana/data/
+monitoring/prometheus/data/
