updated docker compose

--- a/wallboard/nginx.conf
+++ b/wallboard/nginx.conf
@@ -60,6 +60,22 @@ http {
             try_files $uri $uri/ /index.html;
         }
         
+        # Proxy API requests (Production)
+        # Matches 'appBaseUrl' from vite.config.js
+        location /wallboard/ {
+            proxy_pass http://192.168.10.3/helpline/api/wallonly/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Proxy Agent Status requests (Production)
+        # Matches 'agentStatusUrl' from vite.config.js
+        location /ami/ {
+            proxy_pass http://192.168.10.3:8383/ami/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+        
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
