updated docker compose

--- a/wallboard/nginx.conf
+++ b/wallboard/nginx.conf
@@ -76,10 +76,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
         
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # Cache static assets (Vite builds to /assets/)
+        location /assets/ {
+            root /usr/share/nginx/html;
             expires 1y;
             add_header Cache-Control "public, immutable";
+            try_files $uri =404;
         }
         
         # Security headers
@@ -87,8 +89,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        # add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-        # add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; connect-src 'self' ws: wss: wss://192.168.10.3:8384;" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; connect-src 'self' http: https: ws: wss: https://helpline.sematanzania.org wss://192.168.10.3:8384;" always;
 
 
