updated docker compose

--- a/wallboard/nginx.conf
+++ b/wallboard/nginx.conf
@@ -59,6 +59,12 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+
+        # Handle Subpath deployment (e.g. /wallboard-new/)
+        location /wallboard-new/ {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /index.html;
+        }
         
         # Proxy API requests (Production)
         # Matches 'appBaseUrl' from vite.config.js
@@ -76,20 +82,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
         
-        # Cache static assets (Vite builds to /assets/)
-        location /assets/ {
-            root /usr/share/nginx/html;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
-        }
-        
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'; connect-src 'self' http: https: ws: wss: https://helpline.sematanzania.org wss://192.168.10.3:8384;" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' http: https: ws: wss: https://helpline.sematanzania.org wss://192.168.10.3:8384;" always;
 
 
         
