--- a/wallboard/nginx.conf
+++ b/wallboard/nginx.conf
@@ -70,7 +70,15 @@ http {
         # Matches 'appBaseUrl' from vite.config.js
         location /wallboard/ {
             proxy_pass http://192.168.10.3/helpline/api/wallonly/;
-            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Proxy WebSocket requests
+        location /ws-ami/ {
+            proxy_pass http://192.168.10.3:8384/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
             proxy_set_header X-Real-IP $remote_addr;
         }
 
