updated docker compose

--- a/wallboard/nginx.conf
+++ b/wallboard/nginx.conf
@@ -70,6 +70,7 @@ http {
         # Matches 'appBaseUrl' from vite.config.js
         location /wallboard/ {
             proxy_pass http://192.168.10.3/helpline/api/wallonly/;
+            proxy_set_header Host 192.168.10.3;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
@@ -79,6 +80,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
+            proxy_set_header Host 192.168.10.3:8384;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
@@ -86,7 +88,7 @@ http {
         # Matches 'agentStatusUrl' from vite.config.js
         location /ami/ {
             proxy_pass http://192.168.10.3:8383/ami/;
-            proxy_set_header Host $host;
+            proxy_set_header Host 192.168.10.3:8383;
             proxy_set_header X-Real-IP $remote_addr;
         }
         
