feat: Add mock notifications configuration to write to markdown files

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -87,6 +87,8 @@ MOCK_ENABLED=false
 MOCK_AUDIO_FOLDER=./test_audio
 MOCK_USE_FOLDER_FILES=true
 MOCK_SKIP_SCP_DOWNLOAD=true
+# Write notifications to markdown files instead of sending to server
+MOCK_NOTIFICATIONS=false
 MOCK_NOTIFICATIONS_FOLDER=./mock_notifications
 
 # Adaptive Processing Rules
