--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -5,6 +5,9 @@ APP_PORT=8125  # Port for FastAPI application
 DEBUG=true
 LOG_LEVEL=INFO
 
+# Database Configuration (MySQL)
+DATABASE_URL=mysql+pymysql://<DB_USER>:<DB_PASSWORD>@<DB_HOST>:3306/<DB_NAME>?charset=utf8mb4
+
 # Resource Management
 MAX_CONCURRENT_GPU_REQUESTS=1
 MAX_QUEUE_SIZE=20
@@ -38,21 +41,23 @@ REDIS_TASK_DB=1
 ENABLE_STREAMING=true
 MAX_STREAMING_SLOTS=2
 MAX_BATCH_SLOTS=1
-STREAMING_PORT=8300
+STREAMING_PORT=8301
 STREAMING_HOST=0.0.0.0
 
 # Redis Streaming Configuration  
 REDIS_STREAMING_DB=2
 REDIS_STREAMING_CHANNEL_PREFIX=ai_streaming
 
-# Performance Settings
+# Whisper / ASR Performance
+WHISPER_STREAMING_MODEL=base
+WHISPER_BATCH_MODEL=large-v3
 
-# Agent Notification Configuration
-ASTERISK_SERVER_IP=your.ip.address
+# Asterisk / Telephony
+ASTERISK_SERVER_IP=<ASTERISK_SERVER_IP>
 
 # Processing Mode Configuration
-DEFAULT_PROCESSING_MODE=hybrid
-ENABLE_REALTIME_PROCESSING=true
+DEFAULT_PROCESSING_MODE=post_call
+ENABLE_REALTIME_PROCESSING=false
 ENABLE_POSTCALL_PROCESSING=true
 ENABLE_SCP_AUDIO_DOWNLOAD=true
 
@@ -74,21 +79,22 @@ POSTCALL_WHISPER_MODEL=large-v3
 POSTCALL_CONVERT_TO_WAV=true
 POSTCALL_DOWNLOAD_TIMEOUT_SECONDS=60
 
+
+# ================================
 # SCP Audio Download Configuration
-SCP_USER=your_scp_username
-SCP_SERVER=your.scp.server.ip
-SCP_PASSWORD=your_scp_password
-SCP_REMOTE_PATH_TEMPLATE=/path/to/calls/{call_id}.gsm
+# ================================
+SCP_USER=<SCP_USERNAME>
+SCP_SERVER=<SCP_SERVER_IP>
+SCP_PASSWORD=<SCP_PASSWORD>
+SCP_REMOTE_PATH_TEMPLATE=/path/to/calls/{call_id}.wav
 SCP_TIMEOUT_SECONDS=30
 
-# Mock/Debug Audio Settings
-# Enable mock mode to test without actual Asterisk server
+# Mock / Debug Audio
+
 MOCK_ENABLED=false
 MOCK_AUDIO_FOLDER=./test_audio
 MOCK_USE_FOLDER_FILES=true
 MOCK_SKIP_SCP_DOWNLOAD=true
-# Write notifications to markdown files instead of sending to server
-MOCK_NOTIFICATIONS=false
 MOCK_NOTIFICATIONS_FOLDER=./mock_notifications
 
 # Adaptive Processing Rules
@@ -96,27 +102,35 @@ ADAPTIVE_SHORT_CALL_THRESHOLD_SECONDS=30
 ADAPTIVE_LONG_CALL_THRESHOLD_SECONDS=600
 ADAPTIVE_HIGH_PRIORITY_KEYWORDS=emergency,urgent,critical,suicide,violence,accident,medical,police,fire,ambulance
 
-# HuggingFace Hub Configuration
+# Whisper Model Paths
+WHISPER_MODEL_VARIANT=small
+TRANSLATION_STRATEGY=custom_model
+WHISPER_LARGE_V3_PATH=./models/whisper_large_v3
+WHISPER_LARGE_TURBO_PATH=./models/whisper_large_turbo
+
+# HuggingFace Hub
 USE_HF_MODELS=true
 HF_ORGANIZATION=openchs
-HF_TOKEN=your_hf_token_here
+HF_TOKEN=<HF_TOKEN>
 
-# HuggingFace Model IDs (using openchs organization models)
-HF_ASR_MODEL=openai/whisper-large-v3
-HF_CLASSIFIER_MODEL=openchs/multitask-classifier
-HF_NER_MODEL=openchs/ner-model
-HF_TRANSLATOR_MODEL=openchs/translation-model
-HF_SUMMARIZER_MODEL=openchs/summarization-model
-HF_QA_MODEL=openchs/qa-model
+# HuggingFace Model IDs
+HF_ASR_MODEL=openchs/asr-whisper-large-v4
+HF_CLASSIFIER_MODEL=openchs/cls-gbv-distilbert-v1
+HF_NER_MODEL=openchs/ner_distillbert_v1
+HF_TRANSLATOR_MODEL=openchs/sw-en-opus-mult-en-ccalligned
+HF_SUMMARIZER_MODEL=openchs/sum-flan-t5-base-synthetic-v1
+HF_QA_MODEL=openchs/qa-helpline-distilbert-v1
 
 # Agent Notification Configuration
 ENABLE_AGENT_NOTIFICATIONS=true
 NOTIFICATION_MODE=results_only
-NOTIFICATION_ENDPOINT_URL=https://your.server.ip/api/msg/
-NOTIFICATION_AUTH_ENDPOINT_URL=https://your.server.ip/api/
-NOTIFICATION_BASIC_AUTH=your_base64_encoded_credentials
+NOTIFICATION_ENDPOINT_URL=https://<SERVER_IP>/helpline/api/msg/
+NOTIFICATION_AUTH_ENDPOINT_URL=https://<SERVER_IP>/helpline/api/
+NOTIFICATION_BASIC_AUTH=<BASE64_BASIC_AUTH>
 NOTIFICATION_REQUEST_TIMEOUT=10
 NOTIFICATION_MAX_RETRIES=3
+USE_BASE64_ENCODING=true
+
 
 # Agent Payload Logging (for UI development)
 # Set to true to log all notification payloads to a file for UI development
