--- a/ai_service/docker-compose.yml
+++ b/ai_service/docker-compose.yml
@@ -27,6 +27,12 @@ services:
       - DEBUG=${DEBUG:-true}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - SITE_ID=${SITE_ID:-dev-local}
+      - DATABASE_URL=${DATABASE_URL:-mysql+pymysql://ai_service_user:AiService%402024%21Secure@192.168.8.13:3306/ai_service}
+      - MYSQL_HOST=${MYSQL_HOST:-192.168.8.13}
+      - MYSQL_PORT=${MYSQL_PORT:-3306}
+      - MYSQL_USER=${MYSQL_USER:-ai_service_user}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-AiService@2024!Secure}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-ai_service}
       - ENABLE_MODEL_LOADING=false  # API server doesn't need models
       - ENABLE_METRICS=true  # Enable Prometheus metrics
       - REDIS_URL=redis://redis:6379/0
@@ -49,10 +55,44 @@ services:
       - HF_SUMMARIZER_MODEL=${HF_SUMMARIZER_MODEL}
       - HF_QA_MODEL=${HF_QA_MODEL}
       - HF_HOME=/app/.cache/huggingface
+      # Processing Mode Configuration
+      - DEFAULT_PROCESSING_MODE=${DEFAULT_PROCESSING_MODE:-post_call}
+      - ENABLE_STREAMING_PROCESSING=${ENABLE_STREAMING_PROCESSING:-false}
+      - ENABLE_POSTCALL_PROCESSING=${ENABLE_POSTCALL_PROCESSING:-true}
+      - ENABLE_SCP_AUDIO_DOWNLOAD=${ENABLE_SCP_AUDIO_DOWNLOAD:-true}
+      # SCP Audio Download Configuration
+      - SCP_USER=${SCP_USER:-administrator}
+      - SCP_SERVER=${SCP_SERVER:-192.168.8.13}
+      - SCP_PASSWORD=${SCP_PASSWORD}
+      - SCP_REMOTE_PATH_TEMPLATE=${SCP_REMOTE_PATH_TEMPLATE:-/home/dat/helpline/calls/{call_id}.wav16}
+      - SCP_TIMEOUT_SECONDS=${SCP_TIMEOUT_SECONDS:-30}
+      # Post-call Processing Settings
+      - POSTCALL_AUDIO_DOWNLOAD_METHOD=${POSTCALL_AUDIO_DOWNLOAD_METHOD:-scp}
+      - POSTCALL_ENABLE_FULL_PIPELINE=${POSTCALL_ENABLE_FULL_PIPELINE:-true}
+      - POSTCALL_CONVERT_TO_WAV=${POSTCALL_CONVERT_TO_WAV:-true}
+      - POSTCALL_DOWNLOAD_TIMEOUT_SECONDS=${POSTCALL_DOWNLOAD_TIMEOUT_SECONDS:-60}
+      # Agent Notification Configuration
+      - ENABLE_AGENT_NOTIFICATIONS=${ENABLE_AGENT_NOTIFICATIONS:-true}
+      - NOTIFICATION_MODE=${NOTIFICATION_MODE:-results_only}
+      - NOTIFICATION_ENDPOINT_URL=${NOTIFICATION_ENDPOINT_URL}
+      - NOTIFICATION_AUTH_ENDPOINT_URL=${NOTIFICATION_AUTH_ENDPOINT_URL}
+      - NOTIFICATION_BASIC_AUTH=${NOTIFICATION_BASIC_AUTH}
+      - NOTIFICATION_REQUEST_TIMEOUT=${NOTIFICATION_REQUEST_TIMEOUT:-10}
+      - NOTIFICATION_MAX_RETRIES=${NOTIFICATION_MAX_RETRIES:-3}
+      - USE_BASE64_ENCODING=${USE_BASE64_ENCODING:-true}
+      # Asterisk Configuration
+      - ASTERISK_SERVER_IP=${ASTERISK_SERVER_IP:-192.168.8.13}
+      # Mock/Debug Settings
+      - MOCK_ENABLED=${MOCK_ENABLED:-false}
+      - MOCK_AUDIO_FOLDER=${MOCK_AUDIO_FOLDER:-./test_audio}
+      - MOCK_USE_FOLDER_FILES=${MOCK_USE_FOLDER_FILES:-true}
+      - MOCK_NOTIFICATIONS=${MOCK_NOTIFICATIONS:-false}
+      - MOCK_SKIP_SCP_DOWNLOAD=${MOCK_SKIP_SCP_DOWNLOAD:-true}
     volumes:
       - ./logs:/app/logs
       - ./temp:/app/temp
       - ./logs/streaming:/app/logs/streaming
+      - db_data:/app/db
     command: >
       sh -c "
         echo 'Container Environment Check:';
@@ -76,12 +116,19 @@ services:
   # Celery worker for processing tasks
   celery-worker:
     build: .
+    user: "1003:1004"  # Run as franklin user to access local cache
     depends_on:
       redis:
         condition: service_healthy
     environment:
       - DEBUG=${DEBUG:-true}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - DATABASE_URL=${DATABASE_URL:-mysql+pymysql://ai_service_user:AiService%402024%21Secure@192.168.8.13:3306/ai_service}
+      - MYSQL_HOST=${MYSQL_HOST:-192.168.8.13}
+      - MYSQL_PORT=${MYSQL_PORT:-3306}
+      - MYSQL_USER=${MYSQL_USER:-ai_service_user}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-AiService@2024!Secure}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-ai_service}
       - ENABLE_MODEL_LOADING=true  # Worker needs to load models
       - NUMBA_CACHE_DIR=/tmp/numba_cache
       - NUMBA_DISABLE_JIT=0
@@ -100,10 +147,44 @@ services:
       - HF_SUMMARIZER_MODEL=${HF_SUMMARIZER_MODEL}
       - HF_QA_MODEL=${HF_QA_MODEL}
       - HF_HOME=/app/.cache/huggingface
+      # Processing Mode Configuration
+      - DEFAULT_PROCESSING_MODE=${DEFAULT_PROCESSING_MODE:-post_call}
+      - ENABLE_STREAMING_PROCESSING=${ENABLE_STREAMING_PROCESSING:-false}
+      - ENABLE_POSTCALL_PROCESSING=${ENABLE_POSTCALL_PROCESSING:-true}
+      - ENABLE_SCP_AUDIO_DOWNLOAD=${ENABLE_SCP_AUDIO_DOWNLOAD:-true}
+      # SCP Audio Download Configuration
+      - SCP_USER=${SCP_USER:-administrator}
+      - SCP_SERVER=${SCP_SERVER:-192.168.8.13}
+      - SCP_PASSWORD=${SCP_PASSWORD}
+      - SCP_REMOTE_PATH_TEMPLATE=${SCP_REMOTE_PATH_TEMPLATE:-/home/dat/helpline/calls/{call_id}.wav16}
+      - SCP_TIMEOUT_SECONDS=${SCP_TIMEOUT_SECONDS:-30}
+      # Post-call Processing Settings
+      - POSTCALL_AUDIO_DOWNLOAD_METHOD=${POSTCALL_AUDIO_DOWNLOAD_METHOD:-scp}
+      - POSTCALL_ENABLE_FULL_PIPELINE=${POSTCALL_ENABLE_FULL_PIPELINE:-true}
+      - POSTCALL_CONVERT_TO_WAV=${POSTCALL_CONVERT_TO_WAV:-true}
+      - POSTCALL_DOWNLOAD_TIMEOUT_SECONDS=${POSTCALL_DOWNLOAD_TIMEOUT_SECONDS:-60}
+      # Agent Notification Configuration
+      - ENABLE_AGENT_NOTIFICATIONS=${ENABLE_AGENT_NOTIFICATIONS:-true}
+      - NOTIFICATION_MODE=${NOTIFICATION_MODE:-results_only}
+      - NOTIFICATION_ENDPOINT_URL=${NOTIFICATION_ENDPOINT_URL}
+      - NOTIFICATION_AUTH_ENDPOINT_URL=${NOTIFICATION_AUTH_ENDPOINT_URL}
+      - NOTIFICATION_BASIC_AUTH=${NOTIFICATION_BASIC_AUTH}
+      - NOTIFICATION_REQUEST_TIMEOUT=${NOTIFICATION_REQUEST_TIMEOUT:-10}
+      - NOTIFICATION_MAX_RETRIES=${NOTIFICATION_MAX_RETRIES:-3}
+      - USE_BASE64_ENCODING=${USE_BASE64_ENCODING:-true}
+      # Asterisk Configuration
+      - ASTERISK_SERVER_IP=${ASTERISK_SERVER_IP:-192.168.8.13}
+      # Mock/Debug Settings
+      - MOCK_ENABLED=${MOCK_ENABLED:-false}
+      - MOCK_AUDIO_FOLDER=${MOCK_AUDIO_FOLDER:-./test_audio}
+      - MOCK_USE_FOLDER_FILES=${MOCK_USE_FOLDER_FILES:-true}
+      - MOCK_NOTIFICATIONS=${MOCK_NOTIFICATIONS:-false}
+      - MOCK_SKIP_SCP_DOWNLOAD=${MOCK_SKIP_SCP_DOWNLOAD:-true}
     volumes:
       - ./logs:/app/logs
       - ./temp:/app/temp
-      - huggingface_cache:/app/.cache/huggingface  # Docker-managed volume for HuggingFace cache
+      - /home/franklin/.cache/huggingface:/app/.cache/huggingface  # Mount local HuggingFace cache
+      - db_data:/app/db
     # IMPORTANT: Must specify -Q model_processing,celery to consume from correct queues
     command: celery -A app.celery_app worker --loglevel=info -E --pool=solo -Q model_processing,celery --hostname=worker@%h
     # Production command with concurrency and GPU support
@@ -268,3 +349,4 @@ volumes:
   huggingface_cache:
   prometheus_data:
   grafana_data:
+  db_data:
