--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -87,7 +87,8 @@ jobs:
         working-directory: helplinev1/rest_api
         run: |
           php calculate-coverage.php > coverage-analysis.txt || echo "No detailed coverage analysis available" > coverage-analysis.txt
-          COVERAGE=$(php calculate-coverage.php | grep "Estimated Line Coverage" | grep -oE "[0-9]+%" | grep -oE "[0-9]+" 2>/dev/null || echo "0")
+          # Extract coverage as a decimal number (e.g., "89.4") and round to integer
+          COVERAGE=$(php calculate-coverage.php | grep "Estimated Line Coverage" | grep -oE "[0-9]+\.[0-9]+" | head -1 | awk '{printf "%.0f", $1}' 2>/dev/null || echo "0")
           echo "percentage=$COVERAGE" >> $GITHUB_OUTPUT
           echo "COVERAGE_PERCENTAGE=$COVERAGE" >> $GITHUB_ENV
           
@@ -96,7 +97,6 @@ jobs:
           elif [ "$COVERAGE" -ge "40" ]; then COLOR="orange"
           else COLOR="red"; fi
           echo "COVERAGE_COLOR=$COLOR" >> $GITHUB_ENV
-
       - name: Create coverage report
         working-directory: helplinev1/rest_api
         run: |
